--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>Will You Be My Valentine? ❤️</h1>
         <p>You're the most special person in my life, and I can't imagine this day without you!</p>
         <div class="buttons">
-        <a href="https://m.me/evanoliverI.era?text=Yes!%20I%20will%20be%20your%20Valentine!%20💖" class="yes">Yes! 💖</a>
-        <a href="https://m.me/evanoliverI.era?text=No%20😢" class="no" onmouseover="moveNoButton()">No 😢</a>
+            <a href="sms:09078266081?body=Yes!%20I%20will%20be%20your%20Valentine!%20💖" class="yes">Yes! 💖</a>
+            <a href="sms:09078266081?body=No%20😢" class="no" onmouseover="moveNoButton()">No 😢</a>
         </div>
     </div>
 
